# marketing-messaging-service

./: .env  .gitignore  README-plantuml.md  README.md  main.py  messages.txt  pyproject.toml  test.http
alembic/: env.py
alembic/versions/: 3949499e7a56_update_properties_to_json.py  5155b4a39322_init_db.py  f734665c837e_create_initial_tables.py  ffa3822ababf_db_init.py
config/: rules.yaml
docs/: business_assumptions.md  step_summary.md  technical_assumptions.md  technical_decisions.md  technical_specs.md
src/marketing_messaging_service/: db_debug.py  main.py
src/marketing_messaging_service/config/: settings.py
src/marketing_messaging_service/controllers/: __init__.py  audit_controller.py  endpoints.py  event_controller.py
src/marketing_messaging_service/infrastructure/: database.py
src/marketing_messaging_service/models/: __init__.py  decision.py  event.py  event_properties.py  send_request.py  suppression.py  user_traits.py
src/marketing_messaging_service/providers/: fake_providers.py  interfaces.py
src/marketing_messaging_service/repositories/: __init__.py  decision_repository.py  event_repository.py  interfaces.py  send_request_repository.py  suppression_repository.py
src/marketing_messaging_service/schemas/: audit.py  event.py
src/marketing_messaging_service/services/: audit_service.py  (+5 more)
tests/: conftest.py  test_event_controller.py  test_event_processing_service.py
tests/repositories/: test_send_request_repository_event_timestamp.py
tests/services/: test_audit_service.py  test_event_processing_with_rules.py  test_rule_evaluation_service.py
(+2 files in other folders)
